compiler/testData/diagnostics/testsWithJava15/jvmRecord/disabledFeature.kt
// !LANGUAGE: -JvmRecordSupport
// SKIP_TXT

<!UNSUPPORTED_FEATURE!>@JvmRecord<!>
class MyRec(
    val x: String,
    val y: Int,
    vararg val z: Double,
)
